--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mobi.omegacentauri.xrecolor">
 
-    <application android:label="xblacknav">
+    <application android:label="xblacknav" android:theme="@android:style/Theme.Black">
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
